# cmpt201-coursework

./: .gitignore  README.md  lab2.c  lab8.c
lab0/: lab0.c
lab1/.nvim/: lab1.c.2025-09-12T17:06:57-07:00.hash  lab1.c.2025-09-12T17:06:57-07:00.nvim  lab1.c.2025-09-12T17:58:58-07:00.hash  lab1.c.2025-09-12T17:58:58-07:00.nvim  lab1.c.2025-09-12T18:05:54-07:00.hash  lab1.c.2025-09-12T18:05:54-07:00.nvim  lab1.c.2025-09-12T18:14:52-07:00.hash  lab1.c.2025-09-12T18:14:52-07:00.nvim  lab1.c.2025-09-12T18:17:57-07:00.hash  lab1.c.2025-09-12T18:17:57-07:00.nvim  lab1.c.2025-09-12T18:22:44-07:00.hash  lab1.c.2025-09-12T18:22:44-07:00.nvim
lab10/: CMakeLists.txt  lab10.c  server.c
lab11/: lab11.c
lab3/: lab3  lab3.c
lab3/.nvim/: lab3.c.2025-09-27T17:46:26-07:00.hash  lab3.c.2025-09-27T17:46:26-07:00.nvim  makefile.2025-09-27T17:41:22-07:00.hash  makefile.2025-09-27T17:41:22-07:00.nvim  makefile.2025-09-27T17:41:41-07:00.hash  makefile.2025-09-27T17:41:41-07:00.nvim
lab4/: lab4
lab4/.nvim/: lab4.c.2025-10-03T16:43:48-07:00.hash  lab4.c.2025-10-03T16:43:48-07:00.nvim  lab4.c.2025-10-03T18:00:28-07:00.hash  lab4.c.2025-10-03T18:00:28-07:00.nvim  lab4.c.2025-10-03T21:00:05-07:00.hash  lab4.c.2025-10-03T21:00:05-07:00.nvim  lab4.c.2025-10-03T21:01:04-07:00.hash  lab4.c.2025-10-03T21:01:04-07:00.nvim  lab4.c.2025-10-03T21:02:01-07:00.hash  lab4.c.2025-10-03T21:02:01-07:00.nvim  lab4.c.2025-10-03T21:11:04-07:00.hash  lab4.c.2025-10-03T21:11:04-07:00.nvim  lab4.c.2025-10-03T21:14:27-07:00.hash  (+7 more)
lab5/: lab5  lab5.c
lab6/: example_2.c  lab6.c
lab7/: lab7  lab7.c
(+31 files in other folders)
